--- a/src/app/pages/impact-dev/impact-dev.scss
+++ b/src/app/pages/impact-dev/impact-dev.scss
@@ -4,15 +4,19 @@
 .mapdiv {
     height: 80rem;
     width: 100%;
+
     @include width-up-to($tablet-max) {
-        top: 0rem;
+        top: 0;
     }
+
     @include width-up-to($phone-max) {
         height: 50rem;
     }
+
     .mapboxgl-ctrl-bottom-left {
         display: none;
     }
+
     .mapboxgl-ctrl-bottom-right {
         display: none;
     }
